force-app/main/default/objects/IntegrationSettings_SubmitApplication__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Base_Url__c</fullName>
        <label>Base Url</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents_Path__c</fullName>
        <label>Documents Path</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Mock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Mock ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Events_Path__c</fullName>
        <description>contains the events path used for sending notifications for new attachments to MIX</description>
        <label>Events Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_ClientId__c</fullName>
        <label>Header ClientId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_ClientSecret__c</fullName>
        <label>Header ClientSecret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_ContentType__c</fullName>
        <label>Header ContentType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_ACP_Class_Name__c</fullName>
        <label>Inbound ACP Class Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mock_Endpoint_Applications__c</fullName>
        <label>Mock Endpoint Applications</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mock_Endpoint_Documents__c</fullName>
        <label>Mock Endpoint Documents</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mock_Endpoint_Events__c</fullName>
        <label>Mock Endpoint Events</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <description>Timeout in milliseconds</description>
        <label>Timeout</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>IntegrationSettings_SubmitApplication</label>
</CustomObject>